完成个人中心功能的开发

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
     "cSpell.words": [
+        "filelist",
         "iconfont",
         "layui",
         "Prefilter",
         "repassword",
         "repwd",
+        "updatepwd",
         "userinfo"
     ]
 }
