完成文章管理相关功能的开发

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,16 @@
 {
     "cSpell.words": [
+        "addcates",
+        "deletecate",
         "filelist",
         "iconfont",
+        "laypage",
         "layui",
+        "pagenum",
         "Prefilter",
         "repassword",
         "repwd",
+        "updatecate",
         "updatepwd",
         "userinfo"
     ]
